--- a/load.yaml
+++ b/load.yaml
@@ -1,3 +1,7 @@
+overload:
+  enabled: true
+  package: yandextank.plugins.DataUploader
+  token_file: "token.txt"
 phantom:
   address: host.docker.internal:8000
   header_http: "1.1"
@@ -7,7 +11,14 @@ phantom:
     - /
   load_profile:
     load_type: rps
-    schedule: const(1,30s)
+    schedule: line(5, 600, 120s) # const(30,30s)
   ssl: true
 console:
   enabled: true
+telegraf:
+  enabled: false
+autostop:
+  # Остановка тестирования, если количество 5хх ошибок будет больше 10%,
+  # или время ответа превысит некое пороговое значение.
+  autostop:
+    - http(4xx,10%,5s)
