--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-asgiref==3.5.0
 Django==4.0.2
 django-axes==5.31.0
-django-ipware==4.0.2
+djangorestframework==3.13.1
 sqlparse==0.4.2
+yandextank==1.19.0
